# YuKiBot

./: .env.example  .gitattributes  .gitignore  AGENT_STATUS.md  README.md  app.py  app_helpers.py  bootstrap.sh  build-webui.bat  build-webui.sh  check_vps.sh  get-cookies.bat  install.sh  main.py  napcat.bat - Shortcut.lnk  pyproject.toml  requirements.txt  start.bat  start.sh  uninstall.bat  uninstall.sh  yukiko
config/: config.yml.bak  persona.md  personality.yml  plugins.yml  prompts.yml  sensitive.yml  triggers.yml
core/: __init__.py  admin.py  affinity.py  agent.py  agent_tools.py  agent_tools_admin.py  agent_tools_knowledge.py  agent_tools_media.py  agent_tools_memory.py  agent_tools_napcat.py  agent_tools_registry.py  agent_tools_search.py  agent_tools_social.py  agent_tools_types.py  agent_tools_utility.py  agent_tools_web.py  card_builder.py  chat_splitter.py  config_manager.py  config_templates.py  context_aware_confirmation.py  context_compat.py  cookie_auth.py  crawlers.py  crypto.py  emotion.py  engine.py  engine_types.py  enhanced_recall.py  enhanced_tools.py  image.py  image_gen.py  knowledge.py  knowledge_updater.py  markdown.py  memory.py  music.py  music_sources.py  napcat_compat.py  paths.py  (+34 more)
docs/: AGENT_MASTER_PLAN.md  AIBOT_DEFECT_BACKLOG_2026-03-06.md  GETTING_STARTED.md  MEMORY_HANDOVER.md  OPERATIONS_RUNBOOK.md  PLUGIN_GUIDE.md  PROJECT_ANALYSIS.md  PROJECT_AUDIT.md  PROJECT_STRUCTURE.md  README.md  UPGRADE_COMPLETE.md  prompt_navigator_keyword_audit.md
plugins/: FILE_MANIFEST.md  PROJECT_SUMMARY.md  QUICKSTART.md  SELF_LEARNING_EXAMPLES.py  (+9 more)
(+162 files in other folders)
